--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 
 <style>
     body {
-        font-family: 'monospace';
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
         background: #EDE0D4;
         display: flex;
         justify-content: center;
@@ -39,12 +39,11 @@
 } */
 
     .input-group {
-        margin-bottom: 1.25rem;
+        margin-bottom: 1rem;
     }
 
     label {
         display: block;
-        margin-bottom: 0.5rem;
     }
 
     input {
