--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 
 <style>
   body {
-    font-family: 'monospace';
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
     background: #EDE0D4;
   }
 
